# spades

docker/: .dockerignore  Dockerfile  Dockerfile.jupyter  Dockerfile.lightweight  README.md  build.sh  docker-compose.yml  env.example  run.sh  test-container.sh
docs/: gpu_kmer_counting.md
src/cmake/: s3_support.cmake
src/common/configs/: s3_config.hpp
src/common/kmer_index/: CMakeLists.txt
src/common/kmer_index/gpu/: CMakeLists.txt  gpu_hash_table.cu  gpu_hash_table.hpp  gpu_kmer_index.cpp  gpu_kmer_index.hpp  gpu_kmer_kernels.cu  gpu_kmer_kernels.cuh
src/common/utils/: CMakeLists.txt
src/common/utils/filesystem/: file_opener.hpp  s3_file_system.cpp  s3_file_system.hpp
src/common/utils/gpu/: CMakeLists.txt  gpu_memory.cpp  gpu_memory.hpp
